[project]
name = "python-terminusgps"
version = "1.5.10"
description = "Provides abstractions/utilities for working with Wialon API, Authorize.NET API, AWS API, and more."
readme = "README.md"
authors = [ {name = "Blake Nall", email = "blake@terminusgps.com" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "authorizenet>=1.1.5",
    "boto3>=1.34.144",
    "django>=5.1.5",
    "python-wialon>=1.2.4",
]

[project.urls]
Documentation = "https://app.terminusgps.com/docs/apps/python-terminusgps/index.html"
Repository = "https://github.com/terminusgps/python-terminusgps"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["terminusgps/"]

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".venv",
    "venv",
    ".vscode",
    "__pycache__",
    "site-packages",
    "dist",
    "build",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
]
ignore = ["F821"]
fixable = [ "ALL" ]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
]
